<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moodinfo_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/moodinfo_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_mood"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_state_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/emotional_state_required"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_edit_text">

        <AutoCompleteTextView
            android:id="@+id/moodinfo_state_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:dropDownHeight="200dp"
            android:textColor="@color/dark" />


    </com.google.android.material.textfield.TextInputLayout>
    <!-- HIDDEN read-only version of emotional state -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_state_readonly_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/emotional_state"
        android:visibility="gone"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/moodinfo_state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:background="@null"
            android:textColor="@color/dark"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_trigger_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/reason"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_state_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/moodinfo_trigger_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="200" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- HIDDEN read-only version of trigger -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_trigger_readonly_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/reason"
        android:visibility="gone"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_state_readonly_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/moodinfo_trigger_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:enabled="false"
            android:focusable="false"
            android:background="@null"
            android:textColor="@color/dark"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_situation_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/social_situation"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_trigger_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/moodinfo_situation_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:dropDownHeight="200dp"
            android:textColor="@color/dark" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- HIDDEN read-only version of social situation -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moodinfo_situation_readonly_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/social_situation"
        android:visibility="gone"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_trigger_readonly_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/moodinfo_situation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:background="@null"
            android:textColor="@color/dark"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/mood_info_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodinfo_situation_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewComments"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_comment_40dp"
        app:iconTint="@color/dark"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_barrier"
        app:layout_constraintVertical_bias="1.0"
        app:layout_goneMarginTop="16dp" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mood_info_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/dark"
            android:text="@string/button_delete"
            app:strokeColor="@color/dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/dark"
            android:textColor="@color/light"
            android:text="@string/button_save_mood" />
    </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottom_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="button_bar,moodinfo_situation_readonly_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>
