...
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutFeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Spinner
            android:id="@+id/feed_spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="18dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dialog" />

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFilters">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMoodHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

...
