...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <AutoCompleteTextView
                    android:id="@+id/new_event_emotional_state_autocomplete"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:dropDownWidth="347dp"
                    android:dropDownHeight="200dp"
...
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_event_date_text"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:textColor="@color/light"
                    android:clickable="true"
...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_event_trigger_text"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:maxLength="200"
                    android:inputType="textMultiLine"
...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <AutoCompleteTextView
                    android:id="@+id/new_event_social_situation_autocomplete"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:dropDownWidth="347dp"
                    android:dropDownHeight="200dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_username_layout">

                <!-- Back Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/back"
                    android:textColor="@color/light"
                    app:strokeColor="@color/light" />

                <!-- Create Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/light"
                    android:text="@string/create"
...
