<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="emotional_states">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="social_situations">
        <item>Alone</item>
        <item>With one person</item>
        <item>With a few people</item>
        <item>With a crowd</item>
    </string-array>
</resources>